media/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media
  labels:
    app: radarr
    app.kubernetes.io/name: radarr
    app.kubernetes.io/instance: radarr
    app.kubernetes.io/component: movies
    app.kubernetes.io/part-of: media
    app.kubernetes.io/managed-by: kustomize
spec:
  selector:
    matchLabels:
      app: radarr
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: radarr
        app.kubernetes.io/name: radarr
        app.kubernetes.io/instance: radarr
        app.kubernetes.io/component: movies
        app.kubernetes.io/part-of: media
        app.kubernetes.io/managed-by: kustomize
      annotations:
        backup.velero.io/backup-volumes-excludes: radarr-media
    spec:
      securityContext:
        fsGroup: 65534
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: radarr-config
          persistentVolumeClaim:
            claimName: radarr-config-pvc
        - name: radarr-media
          persistentVolumeClaim:
            claimName: pvc-media-nfs
      containers:
        - name: radarr-server
          image: linuxserver/radarr:6.4.4 # {"$imagepolicy": "flux-system:radarr-image-policy"}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7878
          volumeMounts:
            - name: radarr-config
              mountPath: /config
            - name: radarr-media
              mountPath: /media
          resources:
            requests:
              memory: "256Mi"
              cpu: "50m"
            limits:
              memory: "2Gi"
              cpu: "2000m"
