media/radarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr-ingressroute
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`movies.macbytes.io`)
      kind: Rule
      services:
        - name: radarr-svc
          port: 7878
  tls:
    secretName: radarr-tls-certificate
